version/0.25/_sources/api/solver/_autosummary/settings/specific_heat.rst.txt
:orphan:

.. _specific_heat:

specific_heat
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.specific_heat.specific_heat
    :show-inheritance:

.. rubric:: Attributes

================================================================   ============================================================

Attribute                                                                                                               Summary

================================================================   ============================================================
:ref:`option <option_12>`                                                      Select method for calculating material property.

:ref:`value <value_11>`                                                                    Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_2>`                           Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                               Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                                           Polynomial settings.

:ref:`nasa_9_piecewise_polynomial <nasa_9_piecewise_polynomial>`                                 Piecewise polynomial settings.

:ref:`user_defined_function <user_defined_function>`                                             Specify user defined function.

:ref:`rgp_table <rgp_table>`                                                                         Select RGP Table Data Set.

:ref:`real_gas_nist <real_gas_nist>`                                                                    Real gas NIST settings.

================================================================   ============================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

